syntax = "proto2";
option java_multiple_files = true;
option java_package = "org.vertexium.elasticsearch5.models";
package vertexium;

import "value.proto";

message MetadataEntry {
    required string key = 1;
    required Value value = 2;
    required string visibility = 4;
    required uint64 timestamp = 5;
}
